--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-slick": "^0.25.2",
+    "react-stripe-checkout": "^2.6.3",
+    "react-stripe-elements": "^6.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "stripe": "^8.8.0",
     "sweetalert2": "^9.5.4",
     "sweetalert2-react-content": "^2.0.2"
   },
