--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.3.1",
     "react-slick": "^0.25.2",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^6.0.1",
@@ -48,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3002"
 }
